src/objects/Apttus_Config2__AttributeValueMatrixEntry__c.object
<CustomObject>
    <description>Represents a row (entry) in an attribute value matrix.</description>
    <fields>
        <fullName>Apttus_Config2__AttributeValueMatrixId__c</fullName>
        <description>ID of the associated attribute value matrix</description>
        <inlineHelpText>ID of the associated attribute value matrix</inlineHelpText>
        <label>Attribute Value Matrix</label>
        <referenceTo>Apttus_Config2__AttributeValueMatrix__c</referenceTo>
        <relationshipLabel>Attribute Value Matrix Entries</relationshipLabel>
        <relationshipName>AttributeValueMatrixEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Color__c</fullName>
        <description>The product color.</description>
        <inlineHelpText>The product color.</inlineHelpText>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Pink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Vendor__c</fullName>
        <description>The product vendor.</description>
        <inlineHelpText>The product vendor.</inlineHelpText>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Attribute Value Matrix Entry</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AVME-{0000000000}</displayFormat>
        <label>Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Value Matrix Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>